# Twitterbot-2.0

./: .gitignore  README.md  chrome.py  cli.py  config.py  constants.py  csv_logger.py  follow_random.py  image_rec.py  logger.py  pyproject.toml  requirements.txt  unfollow_all.py  window.py
