[project]
name = "twitter-unfollower"
version = "0.1.0"
description = ""
authors = [
    {name = "matt-lenovo-laptop",email = "matmigg0804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pygetwindow (>=0.0.9,<0.0.10)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
